--- a/README
+++ b/README
@@ -1,72 +1,135 @@
+NON MULTINOMIAL CASE
+
 d1 - new linux goes fast - the reg
 d2 - hollywood celebrity goes fast - perez
-d3 - quake runs on linux - thereg
+d3 - quake runs on linux - the reg
 d4 - quake occurs in hollywood - perez
-d5 - website on hollywood - ?
-d6 - website on linux - ?
 
-c d new linux goes fast holly cele quake runs on occurs in website 
+c d new linux goes fast holly cele quake runs on occurs in 
 R 1 1   1     1    1
 P 2           1    1    1     1 
 R 3     1                          1     1    1
 P 4                     1          1             1      1
 
-p(r | 'o h')
- = ( p('o h' | r) * p(r) ) / p('o h')
- = ( p('o'|r) * p('h'|r) * p(r) ) / p('o') * p('h')
- = ( (1/2 * 0/2) * 1/2 ) / (1/4 * 1/2) )
- = ( (2/4 * 1/4) * 1/2 ) / 0.125 )
- = 0.0625 / 0.125
- = 0.5
+new doc, d5 = website on linux
 
-p(r | 'w o h')
- = ( p('w o h' | r) * ( p(r) / p('w o h')
- = ( p('w'|r) * p('o'|r) * p('h'|r) ) * ( p(r) / ( p('w') * p('o') * p('h') )
- = ( 0/0      * 1/2      * 0/0 )    ) * ( 1/2  / ( 0/0    * 1/4    * 2/4    )
- = ( 0/2      * 1/2      * 0/2 )    ) * ( 1/2  / ( 0/4    * 1/4    * 2/4    )
+P(feed=the register | 'website on linux')
+~= P('website on linux' | the register) * P(the register) 
 
- = ( 0/2 * 1/2 * 0/2 ) * ( 1/2 / (0/4 * 1/4 * 2/4) )
- = ( 1/5 * 2/5 * 1/5 ) * ( 1/2 / (1/7 * 2/7 * 3/7) ) # laplace by 1.0
- = 2/125 * 1/2 / 6/343
- = 2/125 * 343/12
- = 686 / 1500
- = 0.45
+P('website on linux' | the register) 
+= P('website' | the register) * P('on' | the register) * P('linux' | the register)    # naive bayes assumption
+= 0 * 1/2 * 2/2
+= 0/2 * 1/2 * 2/2
+= 1/5 * 2/5 * 3/5    # additive smoothing
+= 6/125 
 
- = ( 0/2 * 1/2 * 0/2 ) * ( 1/2 / (0/4 * 1/4 * 2/4) )
- = ( 0.1/2.3 * 1.1/2.3 * 0.1/2.3 ) * ( 1/2 / (0.1/4.3 * 1.1/4.3 * 2.1/4.3) ) # laplace by 0.1
- = ( 0.04347 * 0.47826 * 0.04347 ) * ( 0.5 / 0.02325 * 0.25581 * 0.48837
- = 0.0009 * 0.5 / 0.00290
- = 0.15
+P(the register) 
+= 2/4 
+= 1/2
 
-p(r | 'w o l')
- = ( p('w o l' | r) * ( p(r) / p('w o l')
- = ( p('w'|r) * p('o'|r) * p('l'|r) ) * ( p(r) / ( p('w') * p('o') * p('l') )
- = ( 0/0      * 1/2      * 2/2 )    ) * ( 1/2  / ( 0/0    * 1/4    * 2/4    )
- = ( 0/2      * 1/2      * 2/2 )    ) * ( 1/2  / ( 0/4    * 1/4    * 2/4    )
+P(feed=the register | 'website on linux')
+~= 6/125  * 1/2
+~= 1/50
 
- = ( 0/2 * 1/2 * 2/2 ) * ( 1/2 / (0/4 * 1/4 * 2/4) )
- = ( 1/5 * 2/5 * 3/5 ) * ( 1/2 / (1/7 * 2/7 * 3/7) ) # laplace by 1.0
- = 6/125 * 1/2 / 6/343
- = 6/125 * 343/12
- = 2058 / 1500
- = 1.37   # laplace fail! 
+P(feed=perez | 'website on linux')
+~= P('website on linux' |perez) * P(perez) 
 
- = ( 0/2 * 1/2 * 2/2 ) * ( 1/2 / (0/4 * 1/4 * 2/4) )
- = ( 0.1/2.3 * 1.1/2.3 * 2.1/2.3 ) * ( 1/2 / (0.1/4.3 * 1.1/4.3 * 2.1/4.3) ) # laplace by 0.1
- = ( 0.04347 * 0.47826 * 0.913 ) * ( 0.5 / 0.02325 * 0.25581 * 0.48837
- = 0.0189 * 0.5 / 0.00290
- = 3.25    # another laplace fail!
+P('website on linux' |perez)
+= P('website' | perez) * P('on' | perez) * P('linux' | perez)    # naive bayes assumption
+= 0 * 0/2 * 0/2
+= 0/2 * 0/2 * 0/2
+= 1/5 * 1/5 * 1/5    # additive smoothing
+= 1/125 
 
-example with laplace smoothing required
+P(perez) 
+= 2/4 
+= 1/2
 
-c d   new  linux goes fast
-R 1   1    1     3    1
-R 2   1    6     6    1   
-P 3   5    3     1    4   
-P 4   14   1     1    6   
+P(feed=perez | 'website on linux')
+~= 1/125 * 1/2
+~= 1/500
 
-P new, fast
-R linux goes
+P(feed=the register | 'website on linux') ~= 1/50  ~= 0.9
+P(feed=perez | 'website on linux')        ~= 1/500 ~= 0.1
+
+new doc, d6 = website on hollywood
+
+P(feed=the register | 'website on hollywood')
+~= P('website on hollywood' | the register) * P(the register) 
+~= P('website' | the register) * P('on' | the register) * P('hollywood' | the register) * P(the register) 
+~= 0/2 * 1/2 * 0/2  *  1/2
+~= 1/5 * 2/5 * 1/5  *  1/2
+~= 2/125 * 1/2
+~= 2/250
+
+P(feed=perez | 'website on hollywood')
+~= P('website on hollywood' | perez) * P(perez) 
+~= P('website' | perez) * P('on' | perez) * P('hollywood' | perez) * P(perez) 
+~= 0/2 * 0/2 * 2/2  *  1/2
+~= 1/5 * 1/5 * 3/5  *  1/2
+~= 3/125 * 1/2
+~= 3/250
+
+P(feed=the register | 'website on hollywood') = 2/250 ~= 0.4
+P(feed=perez | 'website on hollywood')        = 3/250 ~= 0.6
+
+     reg perez
+d1 - 1.0 0.0   new linux goes fast
+d2 - 0.0 1.0   hollywood celebrity goes fast
+d3 - 1.0 0.0   quake runs on linux
+d4 - 0.0 1.0   quake occurs in hollywood
+d5 - 0.9 0.1   website on linux
+d6 - 0.4 0.6   website on hollywood
+
+R   P    d  new linux goes fast holly cele quake runs on occurs in website
+1.0      1  1   1     1    1
+    1.0  2            1    1    1     1 
+1.0      3      1                          1     1    1
+    1.0  4                      1          1             1      1
+0.9 0.1  5      1                                     1            1
+0.4 0.6  6                      1                     1            1
+
+3.3 2.7
+
+reiterate for d5
+note: danger here, denom for P(word|class) will explode out since _all_ unlabeled docs are members now...
+
+P(feed=register | 'website on linux')
+~= P('website on linux' | register) * P(register) 
+~= P('website' | register) * P('on' | register) * P('linux' | register)  *  P(register) 
+~= 1.3/3.3 * 2.3/3.3 * 2.9/3.3  *  3.3/6
+~= 8.671/35.937 * 3.3/6
+~= 0.13270
+
+P(feed=perez | 'website on linux')
+~= P('website on linux' | perez) * P(perez) 
+~= P('website' | perez) * P('on' | perez) * P('linux' | perez)  *  P(perez) 
+~= 0.7/2.7 * 0.7/2.7 * 0.1/2.7  *  2.7/6
+~= 0.049/19.683 * 2.7/6
+~= 0.00111
+
+P(feed=register | 'website on linux') ~= 0.13270 ~= 0.991
+P(feed=perez | 'website on linux')    ~= 0.00111 ~= 0.009
+
+reiterate for d6
+
+P(feed=register | 'website on hollywood')
+~= P('website on hollywood' | register) * P(register) 
+~= P('website' | register) * P('on' | register) * P('hollywood' | register) * P(register)
+~= 1.3/3.3 * 2.3/3.3 * 0.4/3.3  *  3.3/6
+~= 1.196/35.937 * 3.3/6
+~= 0.0183
+
+P(feed=perez | 'website on hollywood')
+~= P('website on hollywood' | perez) * P(perez) 
+~= P('website' | perez) * P('on' | perez) * P('hollywood' | perez) * P(perez)
+~= 0.7/2.7 * 0.7/2.7 * 2.6/2.7  *  2.7/6
+~= 1.274/19.683 * 2.7/6
+~= 0.02912
+
+P(feed=register | 'website on hollywood') ~= 0.0183 ~= 0.38
+P(feed=perez | 'website on hollywood')    ~= 0.0291 ~= 0.62
+
 
 
 
