final readme update

--- a/README
+++ b/README
@@ -1,140 +1,12 @@
-bzcat perez.bz2 thereg.bz2 | shuf | head -300 | ./main.rb
+an experiment in semi supervised naive bayes text classification
 
-SERIOUS WORK IN PROGRESS!!!! NOT YET FOR GENERAL CONSUMPTION
+a walk through of the project is available at http://matpalm.com/semi_supervised_naive_bayes
 
+in general run things up with
+bash> bzcat perez.bz2 thereg.bz2 | shuf | head -300 | ./main.rb
 
-NON MULTINOMIAL CASE
-
-d1 - new linux goes fast - the reg
-d2 - hollywood celebrity goes fast - perez
-d3 - quake runs on linux - the reg
-d4 - quake occurs in hollywood - perez
-
-c d new linux goes fast holly cele quake runs on occurs in 
-R 1 1   1     1    1
-P 2           1    1    1     1 
-R 3     1                          1     1    1
-P 4                     1          1             1      1
-
-new doc, d5 = website on linux
-
-P(feed=the register | 'website on linux')
-~= P('website on linux' | the register) * P(the register) 
-
-P('website on linux' | the register) 
-= P('website' | the register) * P('on' | the register) * P('linux' | the register)    # naive bayes assumption
-= 0 * 1/2 * 2/2
-= 0/2 * 1/2 * 2/2
-= 1/5 * 2/5 * 3/5    # additive smoothing
-= 6/125 
-
-P(the register) 
-= 2/4 
-= 1/2
-
-P(feed=the register | 'website on linux')
-~= 6/125  * 1/2
-~= 1/50
-
-P(feed=perez | 'website on linux')
-~= P('website on linux' |perez) * P(perez) 
-
-P('website on linux' |perez)
-= P('website' | perez) * P('on' | perez) * P('linux' | perez)    # naive bayes assumption
-= 0 * 0/2 * 0/2
-= 0/2 * 0/2 * 0/2
-= 1/5 * 1/5 * 1/5    # additive smoothing
-= 1/125 
-
-P(perez) 
-= 2/4 
-= 1/2
-
-P(feed=perez | 'website on linux')
-~= 1/125 * 1/2
-~= 1/250
-
-P(feed=the register | 'website on linux') ~= 1/50  ~= 0.9
-P(feed=perez | 'website on linux')        ~= 1/500 ~= 0.1
-
-new doc, d6 = website on hollywood
-
-P(feed=the register | 'website on hollywood')
-~= P('website on hollywood' | the register) * P(the register) 
-~= P('website' | the register) * P('on' | the register) * P('hollywood' | the register) * P(the register) 
-~= 0/2 * 1/2 * 0/2  *  1/2
-~= 1/5 * 2/5 * 1/5  *  1/2
-~= 2/125 * 1/2
-~= 2/250
-
-P(feed=perez | 'website on hollywood')
-~= P('website on hollywood' | perez) * P(perez) 
-~= P('website' | perez) * P('on' | perez) * P('hollywood' | perez) * P(perez) 
-~= 0/2 * 0/2 * 2/2  *  1/2
-~= 1/5 * 1/5 * 3/5  *  1/2
-~= 3/125 * 1/2
-~= 3/250
-
-P(feed=the register | 'website on hollywood') = 2/250 ~= 0.4
-P(feed=perez | 'website on hollywood')        = 3/250 ~= 0.6
-
-     reg perez
-d1 - 1.0 0.0   new linux goes fast
-d2 - 0.0 1.0   hollywood celebrity goes fast
-d3 - 1.0 0.0   quake runs on linux
-d4 - 0.0 1.0   quake occurs in hollywood
-d5 - 0.9 0.1   website on linux
-d6 - 0.4 0.6   website on hollywood
-
-R   P    d  new linux goes fast holly cele quake runs on occurs in website
-1.0      1  1   1     1    1
-    1.0  2            1    1    1     1 
-1.0      3      1                          1     1    1
-    1.0  4                      1          1             1      1
-0.9 0.1  5      1                                     1            1
-0.4 0.6  6                      1                     1            1
-
-3.3 2.7
-
-reiterate for d5
-note: danger here, denom for P(word|class) will explode out since _all_ unlabeled docs are members now...
-
-P(feed=register | 'website on linux')
-~= P('website on linux' | register) * P(register) 
-~= P('website' | register) * P('on' | register) * P('linux' | register)  *  P(register) 
-~= 1.3/3.3 * 2.3/3.3 * 2.9/3.3  *  3.3/6
-~= 8.671/35.937 * 3.3/6
-~= 0.13270
-
-P(feed=perez | 'website on linux')
-~= P('website on linux' | perez) * P(perez) 
-~= P('website' | perez) * P('on' | perez) * P('linux' | perez)  *  P(perez) 
-~= 0.7/2.7 * 0.7/2.7 * 0.1/2.7  *  2.7/6
-~= 0.049/19.683 * 2.7/6
-~= 0.00111
-
-P(feed=register | 'website on linux') ~= 0.13270 ~= 0.991
-P(feed=perez | 'website on linux')    ~= 0.00111 ~= 0.009
-
-reiterate for d6
-
-P(feed=register | 'website on hollywood')
-~= P('website on hollywood' | register) * P(register) 
-~= P('website' | register) * P('on' | register) * P('hollywood' | register) * P(register)
-~= 1.3/3.3 * 2.3/3.3 * 0.4/3.3  *  3.3/6
-~= 1.196/35.937 * 3.3/6
-~= 0.0183
-
-P(feed=perez | 'website on hollywood')
-~= P('website on hollywood' | perez) * P(perez) 
-~= P('website' | perez) * P('on' | perez) * P('hollywood' | perez) * P(perez)
-~= 0.7/2.7 * 0.7/2.7 * 2.6/2.7  *  2.7/6
-~= 1.274/19.683 * 2.7/6
-~= 0.02912
-
-P(feed=register | 'website on hollywood') ~= 0.0183 ~= 0.38
-P(feed=perez | 'website on hollywood')    ~= 0.0291 ~= 0.62
-
-
-
-
+there's a problem with a large unlabelled set causing float overflow. to retain umerical accuracy
+this code keeps fractions in rational form (ie 0.5 is represented as [1,2]) and in some
+calculations, particularly lowest common denominator for additive smoothing, the denominators
+go through the roof and fail when being to_f'd. one day i might come back and fix it but things
+were ok for experimental proof of concept data sets sizes; ie 300 articles.
